# cuda-practice

./: .gitignore  README.md  copilot_system_dataflow.drawio
cuda-playground/cmake_gtest/tests/: CMakeLists.txt
cuda-playground/cmake_gtest_official/: CMakeLists.txt
cuda-playground/contiguousTensor/: CMakeLists.txt  main.cpp
cuda-playground/cudagdb_managed_mem/: main.cu
cuda-playground/floatmax/: floatmax.cpp
cuda-playground/managed_mem/: main.cu
cuda-playground/move/: main.cpp
cuda-playground/multifile/: a.cu  ut.cu  ut.h
cuda-playground/multifile_1/: a.cu  run.sh  ut.cu  ut.h
cuda-playground/multifile_2/: fun.cu  fun.cuh  onefile.cu  test.cu
cuda-playground/nsyscudagraph/: engin_graph.py  getgraph.py  test_globallppool.nsys-rep  test_globallppool.onnx  test_globallppool.plan  test_globallppool_cudagraph.nsys-rep  test_globallppool_cudagraph_trace_node.nsys-rep  test_globallppool_torch.onnx  test_globallppool_torch.plan  test_globallppool_torch100.onnx  test_globallppool_torch100.plan  test_globallppool_torch100_cudagraph_trace_node.nsys-rep  test_globallppool_torch100_layer.json  test_globallppool_torch100_profile.json  test_globallppool_torch12.onnx  test_globallppool_torch12.plan  test_globallppool_torch12_cudagraph_trace_node.nsys-rep  test_globallppool_torch_cudagraph_trace_node.nsys-rep
cuda-playground/stage_memacc/lightnet/: CMakeLists.txt
cuda-playground/stage_memacc/lightnet/src/: kernel_reduce.cu  kernel_reduce.cuh  network.cu  network.cuh  operator.cu  operator.cuh  operator_reduce.cu  tensor.cu  tensor.cuh
cuda-playground/string_cstr/: main.cpp
cuda-playground/sync/: test.cu
cuda-playground/tensor10/: CMakeLists.txt  main.cpp
cuda-playground/torch_dtype/: CMakeLists.txt  main.cpp
cuda-playground/un_map/: test.cpp
v1/: CMakeLists.txt  cmds.sh
v1/src/: CMakeLists.txt
v1/src/descriptor/: CMakeLists.txt  descriptor.cpp  descriptor.cu  descriptor.h
v1/src/networks/: CMakeLists.txt
v1/src/networks/alexnet/: CMakeLists.txt  alexnet.cu  alexnet.cuh
v1/src/operators/: CMakeLists.txt
v1/src/operators/conv2d/: CMakeLists.txt  conv2d.cu  conv2d.cuh
v1/src/operators/pool/: CMakeLists.txt  avg_pool2d.cu  max_pool2d.cu  max_pool2d.cuh  pool2d.cuh
v1/src/operators/relu/: CMakeLists.txt  relu.cu  relu.cuh
v1/src/utils/: CMakeLists.txt  cudnn_error.cuh  log.h  log_err.h  print_tensor.h
v1/tests/: CMakeLists.txt
v1/tests/test_networks/: CMakeLists.txt  test_alexnet.cu
v1/tests/test_networks/test_alexnet/: save_model.py  save_model_01.py  save_model_1.py  save_model_CAF.py  save_model_FAF.py
v1/tests/test_operators/: CMakeLists.txt  main.cpp  main.cu  test_conv2d.cu  test_conv2d_bias_active.ccu  test_conv2d_bias_active.cu  test_pool2d_max.cu  test_relu.cu
v1/tests/test_utils/: CMakeLists.txt
v2/src/: CMakeLists.txt
v2/src/graphs/: CMakeLists.txt
v2/src/graphs/losses/: CMakeLists.txt  l1loss_graph.cu  l1loss_graph.cuh  loss_graphs.h
v2/src/kernels/: CMakeLists.txt  all_kernels.cu  kelementwise.cuh  kpool2d.cuh_
v2/src/network/: CMakeLists.txt  compute_graph.cu  compute_graph.h  network.cu  network.h
v2/src/operators/: CMakeLists.txt  elementwise.cu  elementwise.cuh  map.cu  map.cuh  matmul.cu  operator.cu  operator.cuh  operators.h  reduce.cu  reduce.cuh
v2/src/tensor/: CMakeLists.txt  tensor.cu  tensor.h
v2/src/utils/: CMakeLists.txt
v2/src/utils/common/: common_tools.cpp
v2/src/utils/cuda/: cuda_tools.cuh
v2/tests/test_network/: CMakeLists.txt  test_sample.cu
v2/tests/test_networks/: CMakeLists.txt  main.cu  test_alexnet.cu  test_samplenet.cpp
v2/tests/test_networks/test_alexnet/: conv_as_fc.py  eq.py  save_model.py  save_model_FAFC02_mod.py  save_model_FAFC03.py  synset_words_.txt  torch_alexnet_smoke.py
v2/tests/test_operators/: CMakeLists.txt  main.cu  sample_cudnnconvbiasactive.cu  test_conv2d.cu  test_pool2d.cu
v2/tests/test_tensor/: CMakeLists.txt  test_tensor.cu
v2/tests/test_utils/: test_print.cpp
